server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-service
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
